# cerno

./: .bandit  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  cerno.py  pyproject.toml  pyrightconfig.json  requirements.txt  schema.sql
.github/workflows/: release.yml  security.yml  test.yml
cerno_pkg/: __init__.py  _version.py  analysis.py  ansi.py  banner.py  claude_assistant.py  config.py  constants.py  cross_scan.py  database.py  enums.py  fs.py  logging_setup.py  models.py  nessus_import.py  nxc_db.py  onboarding.py  ops.py  parsing.py  render.py  session.py  tool_context.py  tool_definitions.py  tool_registry.py  tools.py  tui.py  workflow_mapper.py  workflow_mappings.yaml
cerno_pkg/skills/: cerno-assistant.md
docs/: ADDING_TOOLS_QUICKSTART.md  CUSTOM_WORKFLOWS.md  DATABASE.md  ERROR_HANDLING.md  TOOL_SYSTEM_GUIDE.md
scripts/: extract_changelog.py
tests/: conftest.py  test_claude_assistant.py  test_cross_scan.py  test_database.py  test_fs.py  test_models.py  test_multi_scan_review.py  test_nessus_import.py  test_nxc_db.py  test_ops.py  test_parsing.py  test_render.py  test_session.py  test_version.py  test_workflow_mapper.py
tests/fixtures/: minimal.nessus
tests/fixtures/nxc/: rdp.db  smb.db
